--- a/src/components/sbb-wagon/sbb-wagon.scss
+++ b/src/components/sbb-wagon/sbb-wagon.scss
@@ -22,6 +22,7 @@
   flex-direction: column;
   align-items: center;
   max-width: var(--sbb-wagon-width);
+  position: relative;
 
   :host([type='wagon']) &,
   :host([type='closed']) & {
@@ -31,14 +32,9 @@
 
 .sbb-wagon__label {
   @include sbb.text-s--regular;
-}
 
-.sbb-wagon__label-screenreader {
-  @include sbb.screen-reader-only;
-}
-
-.sbb-wagon__label-text {
-  display: inline-block;
+  display: var(--sbb-train-formation-wagon-label-display, inline-block);
+  min-height: calc(1em * var(--sbb-typo-line-height-body-text));
 }
 
 .sbb-wagon__compartment {
