--- a/src/global/styles/core/variables.scss
+++ b/src/global/styles/core/variables.scss
@@ -19,6 +19,7 @@
   --sbb-train-formation-wagon-width: #{functions.px-to-rem-build(80)};
   --sbb-train-formation-wagon-height: #{functions.px-to-rem-build(40)};
   --sbb-train-formation-wagon-border-radius: #{functions.px-to-rem-build(12)};
+  --sbb-train-formation-wagon-gap: var(--sbb-spacing-fixed-1x);
 
   // Title
   --sbb-font-size-title-1: var(--sbb-typo-scale-2-5x);
