--- a/src/components/sbb-link/sbb-link.scss
+++ b/src/components/sbb-link/sbb-link.scss
@@ -10,7 +10,9 @@
 
   display: inline-block;
   color: inherit;
-  outline: none;
+  // Use !important here to not interfere with Firefox focus ring definition
+  // which appears in normalize css of several frameworks.
+  outline: none !important;
 
   @include sbb.link-variables;
 
