--- a/src/components/sbb-navigation-action/sbb-navigation-action.scss
+++ b/src/components/sbb-navigation-action/sbb-navigation-action.scss
@@ -5,7 +5,9 @@
 @include sbb.host-component-properties;
 
 :host {
-  outline: none;
+  // Use !important here to not interfere with Firefox focus ring definition
+  // which appears in normalize css of several frameworks.
+  outline: none !important;
 
   --sbb-navigation-action-color: var(--sbb-color-cloud-default);
 }
