--- a/src/components/sbb-toggle-check/sbb-toggle-check.scss
+++ b/src/components/sbb-toggle-check/sbb-toggle-check.scss
@@ -6,7 +6,9 @@
 
 :host {
   display: inline-block;
-  outline: none;
+  // Use !important here to not interfere with Firefox focus ring definition
+  // which appears in normalize css of several frameworks.
+  outline: none !important;
 
   --sbb-toggle-check-font-color: var(--sbb-color-charcoal-default);
   --sbb-toggle-check-checked-color: var(--sbb-color-red-default);
