--- a/src/components/sbb-button/sbb-button.scss
+++ b/src/components/sbb-button/sbb-button.scss
@@ -220,7 +220,7 @@
 
   // If the the device can hover over elements with ease
   @include sbb.hover-mq($hover: true) {
-    :host(:not([disabled]:not([disabled='false']))) &:hover:not(:active) {
+    :host(:not([disabled]:not([disabled='false']), :active, [data-active]):hover) & {
       --sbb-button-translate-y-content-hover: #{sbb.px-to-rem-build(-1)};
       --sbb-button-shadow-1-offset-y: calc(
         0.5 * var(--sbb-shadow-elevation-level-3-shadow-1-offset-y)
@@ -283,22 +283,24 @@
     width: var(--sbb-button-icon-size);
   }
 
-  :host(:not([disabled]:not([disabled='false']))) &:active::before {
+  :host(:not([disabled]:not([disabled='false'])):is(:active, [data-active])) &::before {
     color: var(--sbb-button-color-active-text);
     background-color: var(--sbb-button-color-active-background);
     border-color: var(--sbb-button-color-active-border);
   }
 
   // Only apply shadow definitions where it is really used.
-  :host([variant='primary']:not([disabled]:not([disabled='false']))) &,
+  :host([variant='primary']:not([disabled]:not([disabled='false']), :active, [data-active])) &,
   :host(
       [variant='secondary']:not(
           [negative]:not([negative='false']),
-          [disabled]:not([disabled='false'])
+          [disabled]:not([disabled='false']),
+          :active,
+          [data-active]
         )
     )
     & {
-    &:not(:active)::before {
+    &::before {
       box-shadow: var(--sbb-shadow-elevation-level-3-shadow-2-offset-x)
           var(--sbb-button-shadow-2-offset-y) var(--sbb-button-shadow-2-blur)
           var(--sbb-shadow-elevation-level-3-shadow-2-spread) var(--sbb-button-shadow-2-color),
