--- a/src/components/sbb-tag/sbb-tag.scss
+++ b/src/components/sbb-tag/sbb-tag.scss
@@ -56,7 +56,7 @@
 }
 
 // Pressed state
-:host(:active) {
+:host(:is(:active, [data-active])) {
   --sbb-tag-background-color: var(--sbb-color-milk-default);
   --sbb-tag-border-color: var(--sbb-color-iron-default);
   --sbb-tag-border-width: var(--sbb-border-width-2x);
@@ -108,7 +108,7 @@
     }
   }
 
-  :host(:not([disabled]:not([disabled='false']))) &:hover:not(:active) {
+  :host(:hover:not([disabled]:not([disabled='false']), :active, [data-active])) & {
     // If the the device can hover over elements with ease
     @include sbb.hover-mq($hover: true) {
       --sbb-tag-background-color: var(--sbb-color-milk-default);
