--- a/src/global/styles/mixins/card.scss
+++ b/src/global/styles/mixins/card.scss
@@ -105,6 +105,10 @@
     pointer-events: none;
   }
 
+  &:focus-visible {
+    @include a11y.focus-outline;
+  }
+
   @include a11y.if-forced-colors {
     border: var(--sbb-border-width-1x) solid ButtonText;
   }
