--- a/src/components/sbb-slider/sbb-slider.scss
+++ b/src/components/sbb-slider/sbb-slider.scss
@@ -22,6 +22,9 @@
     --sbb-slider-line-color: CanvasText;
   }
 
+  // Use !important here to not interfere with Firefox focus ring definition
+  // which appears in normalize css of several frameworks.
+  outline: none !important;
   display: inline-block;
   min-width: #{sbb.px-to-rem-build(150)};
   width: min(#{sbb.px-to-rem-build(400)}, 100%);
@@ -113,18 +116,17 @@
   border: var(--sbb-slider-knob-border-size) solid var(--sbb-slider-knob-border-color);
   border-radius: 50%;
   pointer-events: none;
-}
 
-// slider knob resize on click (active / focus)
-:host(:not(:is([disabled]:not([disabled='false']), [readonly]:not([readonly='false'])))) {
-  :is(
-      .sbb-slider__range-input:active ~ .sbb-slider__knob,
-      .sbb-slider__range-input:focus-visible ~ .sbb-slider__knob
-    ) {
+  :host(:focus-visible) & {
+    @include sbb.focus-outline;
+
     --sbb-slider-knob-size: #{sbb.px-to-rem-build(31)};
   }
 
-  .sbb-slider__range-input:focus-visible ~ .sbb-slider__knob {
-    @include sbb.focus-outline;
+  // slider knob resize on click (active / focus)
+  :host(:not(:is([disabled]:not([disabled='false']), [readonly]:not([readonly='false']))))
+    .sbb-slider__range-input:active
+    ~ & {
+    --sbb-slider-knob-size: #{sbb.px-to-rem-build(31)};
   }
 }
