--- a/src/components/sbb-teaser-hero/sbb-teaser-hero.scss
+++ b/src/components/sbb-teaser-hero/sbb-teaser-hero.scss
@@ -5,6 +5,10 @@
 @include sbb.host-component-properties;
 
 :host {
+  // Use !important here to not interfere with Firefox focus ring definition
+  // which appears in normalize css of several frameworks.
+  outline: none !important;
+
   @include sbb.panel-variables;
 
   --sbb-teaser-hero-brightness-hover: 1.075;
