--- a/src/components/sbb-radio-button/sbb-radio-button.scss
+++ b/src/components/sbb-radio-button/sbb-radio-button.scss
@@ -15,6 +15,10 @@
   --sbb-radio-button-icon-align: calc(
     (1em * var(--sbb-typo-line-height-body-text) - var(--sbb-radio-button-size)) / 2
   );
+
+  // Use !important here to not interfere with Firefox focus ring definition
+  // which appears in normalize css of several frameworks.
+  outline: none !important;
 }
 
 :host([data-group-disabled]),
