--- a/src/components/sbb-slider/sbb-slider.scss
+++ b/src/components/sbb-slider/sbb-slider.scss
@@ -8,6 +8,7 @@
   --sbb-slider-line-height: #{sbb.px-to-rem-build(4)};
   --sbb-slider-value-fraction: 0;
   --sbb-slider-knob-size: #{sbb.px-to-rem-build(28)};
+  --sbb-slider-knob-size-active: #{sbb.px-to-rem-build(31)};
   --sbb-slider-knob-border-size: #{sbb.px-to-rem-build(3)};
   --sbb-slider-knob-color: var(--sbb-color-white-default);
   --sbb-slider-knob-border-color: var(--sbb-color-red-default);
@@ -120,13 +121,13 @@
   :host(:focus-visible) & {
     @include sbb.focus-outline;
 
-    --sbb-slider-knob-size: #{sbb.px-to-rem-build(31)};
+    --sbb-slider-knob-size: var(--sbb-slider-knob-size-active);
   }
 
   // slider knob resize on click (active / focus)
   :host(:not(:is([disabled]:not([disabled='false']), [readonly]:not([readonly='false']))))
     .sbb-slider__range-input:active
     ~ & {
-    --sbb-slider-knob-size: #{sbb.px-to-rem-build(31)};
+    --sbb-slider-knob-size: var(--sbb-slider-knob-size-active);
   }
 }
