fix(sbb-form-field): always use label to link to input
BREAKING CHANGE: It is now required to use a `<label>` to label an input in a `<sbb-form-field>`.

--- a/src/components/sbb-form-field/sbb-form-field.scss
+++ b/src/components/sbb-form-field/sbb-form-field.scss
@@ -151,20 +151,18 @@
 
   display: flex;
   max-width: 100%;
+  cursor: default;
 
   // Moves label down and input up to meet positioning requirements
   margin-block-end: var(--sbb-form-field-label-to-input-gap);
   color: var(--sbb-form-field-label-color);
-  user-select: none;
-  pointer-events: none;
 
   :host([data-input-type='select']) & {
     padding-inline-end: var(--sbb-form-field-select-inline-padding-end);
   }
 }
 
-::slotted(*[slot='label']),
-slot[name='label'] > span {
+::slotted(*[slot='label']) {
   @include sbb.ellipsis;
 }
 
