--- a/src/components/sbb-header-action/sbb-header-action.scss
+++ b/src/components/sbb-header-action/sbb-header-action.scss
@@ -9,6 +9,7 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
 
 :host {
   --sbb-header-action-padding-inline: 0;
+  --sbb-header-action-color: var(--sbb-color-black-default);
   --sbb-header-action-background-color: transparent;
   --sbb-header-action-min-height: var(--sbb-size-button-m-min-height);
   --sbb-header-action-min-width: var(--sbb-header-action-min-height);
@@ -18,6 +19,10 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
   --sbb-header-action-background-inset: 0;
   --sbb-header-action-translate-y: 0;
   --sbb-header-action-gap: var(--sbb-spacing-fixed-2x);
+
+  @include sbb.if-forced-colors {
+    --sbb-header-action-border-color: CanvasText;
+  }
 
   // The variable is assigned to the property in the sbb-header component if it is
   // the first element in the header and needs left offset correction (see sbb-header.scss).
@@ -51,16 +56,24 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
     --sbb-header-action-translate-y: #{sbb.px-to-rem-build(-1)};
     --sbb-header-action-background-inset: calc(var(--sbb-border-width-2x) * -1);
 
-    .sbb-header-action::before {
-      @include sbb.if-forced-colors {
-        --sbb-header-action-border-color: Highlight;
-      }
+    @include sbb.if-forced-colors {
+      --sbb-header-action-border-color: Highlight;
     }
   }
 }
 
 :host(:is(:active, [data-active])) {
   --sbb-header-action-background-color: var(--sbb-color-cloud-default);
+
+  @include sbb.if-forced-colors {
+    --sbb-header-action-border-color: Highlight;
+  }
+}
+
+:host([role='button']) {
+  @include sbb.if-forced-colors {
+    --sbb-header-action-color: ButtonText;
+  }
 }
 
 .sbb-header-action {
@@ -70,12 +83,13 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
   position: relative;
   align-items: center;
   justify-content: center;
-  color: var(--sbb-color-black-default);
+  color: var(--sbb-header-action-color);
   text-decoration: none;
   min-height: var(--sbb-header-action-min-height);
   min-width: var(--sbb-header-action-min-width);
   padding-inline: var(--sbb-header-action-padding-inline);
   cursor: pointer;
+  user-select: none;
 
   &::before {
     position: absolute;
@@ -89,7 +103,7 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
     border: var(--sbb-border-width-1x) solid var(--sbb-header-action-border-color);
 
     @include sbb.if-forced-colors {
-      --sbb-header-action-border-color: CanvasText;
+      border-width: var(--sbb-border-width-2x);
     }
 
     :host(:focus-visible) & {
