--- a/src/components/sbb-menu-action/sbb-menu-action.scss
+++ b/src/components/sbb-menu-action/sbb-menu-action.scss
@@ -12,20 +12,41 @@
   --sbb-menu-action-border-radius: var(--sbb-border-radius-infinity);
   --sbb-menu-action-outer-horizontal-padding: var(--sbb-spacing-fixed-3x);
   --sbb-menu-action-gap: var(--sbb-spacing-fixed-2x);
+  --sbb-menu-action-cursor: pointer;
+  --sbb-menu-action-color: var(--sbb-color-white-default);
+  --sbb-menu-action-forced-color-border-color: CanvasText;
+}
+
+:host(:hover:not([disabled]:not([disabled='false']))) {
+  @include sbb.hover-mq($hover: true) {
+    --sbb-menu-background-color: var(--sbb-color-iron-default);
+    --sbb-menu-action-forced-color-border-color: Highlight;
+  }
+}
+
+:host([disabled]:not([disabled='false'])) {
+  --sbb-menu-action-cursor: default;
+  --sbb-menu-action-color: var(--sbb-color-granite-default);
+  --sbb-menu-action-forced-color-border-color: GrayText;
+
+  @include sbb.if-forced-colors {
+    --sbb-menu-action-color: GrayText;
+  }
+}
+
+:host([role='button']) {
+  @include sbb.if-forced-colors {
+    --sbb-menu-action-color: ButtonText;
+  }
 }
 
 .sbb-menu-action {
   text-decoration: none;
   display: block;
   width: 100%;
-  color: var(--sbb-color-white-default);
+  color: var(--sbb-menu-action-color);
   padding: var(--sbb-spacing-fixed-1x) var(--sbb-menu-action-outer-horizontal-padding);
-  cursor: pointer;
-
-  :host([disabled]:not([disabled='false'])) & {
-    cursor: default;
-    color: var(--sbb-color-graphite-default);
-  }
+  cursor: var(--sbb-menu-action-cursor);
 }
 
 .sbb-menu-action__content {
@@ -38,6 +59,7 @@
   border-radius: var(--sbb-menu-action-border-radius);
   user-select: none;
   -webkit-tap-highlight-color: transparent;
+  background-color: var(--sbb-menu-background-color);
 
   :host(:focus-visible) & {
     --sbb-focus-outline-color: var(--sbb-focus-outline-color-dark);
@@ -45,10 +67,8 @@
     @include sbb.focus-outline;
   }
 
-  @include sbb.hover-mq($hover: true) {
-    :host(:not([disabled]:not([disabled='false']))) .sbb-menu-action:hover & {
-      background-color: var(--sbb-color-iron-default);
-    }
+  @include sbb.if-forced-colors {
+    border: var(--sbb-border-width-2x) solid var(--sbb-menu-action-forced-color-border-color);
   }
 }
 
@@ -72,6 +92,10 @@
   margin-inline-start: auto;
   width: var(--sbb-spacing-fixed-4x);
   max-height: var(--sbb-spacing-fixed-4x);
+
+  @include sbb.if-forced-colors {
+    color: var(--sbb-menu-action-color);
+  }
 }
 
 .sbb-menu-action__opens-in-new-window {
