--- a/src/components/sbb-navigation-action/sbb-navigation-action.scss
+++ b/src/components/sbb-navigation-action/sbb-navigation-action.scss
@@ -14,11 +14,21 @@
 
 :host([active]:not([active='false'])) {
   --sbb-navigation-action-color: var(--sbb-color-storm-default);
+
+  @include sbb.if-forced-colors {
+    --sbb-navigation-action-color: AccentColor;
+  }
 }
 
 @include sbb.hover-mq($hover: true) {
   :host(:hover) {
     --sbb-navigation-action-color: var(--sbb-color-storm-default);
+  }
+}
+
+:host([role='button']) {
+  @include sbb.if-forced-colors {
+    --sbb-navigation-action-color: ButtonText;
   }
 }
 
@@ -39,6 +49,10 @@
     @include sbb.focus-outline;
 
     border-radius: calc(var(--sbb-border-radius-4x) - var(--sbb-focus-outline-offset));
+  }
+
+  @include sbb.if-forced-colors {
+    transition: none;
   }
 
   :host([size='m']) & {
