--- a/src/components/sbb-tooltip-trigger/sbb-tooltip-trigger.scss
+++ b/src/components/sbb-tooltip-trigger/sbb-tooltip-trigger.scss
@@ -11,6 +11,10 @@
   // which appears in normalize css of several frameworks.
   outline: none !important;
   display: inline-block;
+
+  @include sbb.if-forced-colors {
+    --sbb-tooltip-color: ButtonText !important;
+  }
 }
 
 @include sbb.hover-mq($hover: true) {
@@ -25,6 +29,10 @@
 
 :host([disabled]:not([disabled='false'])) {
   --sbb-tooltip-color: var(--sbb-color-graphite-default);
+
+  @include sbb.if-forced-colors {
+    --sbb-tooltip-color: GrayText;
+  }
 
   pointer-events: none;
 }
