--- a/src/global/styles/core/variables.scss
+++ b/src/global/styles/core/variables.scss
@@ -1,6 +1,7 @@
 @use 'node_modules/@sbb-esta/lyne-design-tokens/dist/scss/sbb-variables_css--placeholder.scss';
 @use './mediaqueries';
 @use './functions';
+@use '../mixins/a11y';
 
 @mixin lyne-components-css-vars {
   // Grab css vars defined by `@sbb-esta/lyne-design-tokens` npm package
@@ -65,6 +66,13 @@
   // Infinity border radius, can be used to achieve rounded border on start and end
   // TODO: Check if infinity is supported by all browsers (e.g. Firefox) -> calc(1em * infinity);
   --sbb-border-radius-infinity: 10000000em;
+
+  @include a11y.if-forced-colors {
+    // Focus outline
+    --sbb-focus-outline-color-default: Highlight;
+    --sbb-focus-outline-color-dark: Highlight;
+    --sbb-focus-outline-width: var(--sbb-border-width-2x);
+  }
 
   @include mediaqueries.mq($from: micro) {
     // Layout
