--- a/src/components/sbb-header-action/sbb-header-action.scss
+++ b/src/components/sbb-header-action/sbb-header-action.scss
@@ -106,7 +106,8 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
       border-width: var(--sbb-border-width-2x);
     }
 
-    :host(:focus-visible) & {
+    // Hide focus outline when focus origin is mouse or touch. This is being used in tooltip as a workaround.
+    :host(:focus-visible:not([data-focus-origin='mouse'], [data-focus-origin='touch'])) & {
       @include sbb.focus-outline;
     }
   }
