--- a/src/components/sbb-menu-action/sbb-menu-action.scss
+++ b/src/components/sbb-menu-action/sbb-menu-action.scss
@@ -61,7 +61,8 @@
   -webkit-tap-highlight-color: transparent;
   background-color: var(--sbb-menu-background-color);
 
-  :host(:focus-visible) & {
+  // Hide focus outline when focus origin is mouse or touch. This is being used in tooltip as a workaround.
+  :host(:focus-visible:not([data-focus-origin='mouse'], [data-focus-origin='touch'])) & {
     --sbb-focus-outline-color: var(--sbb-focus-outline-color-dark);
 
     @include sbb.focus-outline;
