--- a/src/components/sbb-radio-button/sbb-radio-button.scss
+++ b/src/components/sbb-radio-button/sbb-radio-button.scss
@@ -40,12 +40,6 @@
   color: var(--sbb-radio-button-label-color);
   -webkit-tap-highlight-color: transparent;
 
-  :host(:focus-visible) & {
-    @include sbb.focus-outline;
-
-    border-radius: calc(var(--sbb-border-radius-4x) - var(--sbb-focus-outline-offset));
-  }
-
   :host([size='s']) & {
     @include sbb.text-s--regular;
   }
@@ -53,6 +47,13 @@
   :host([data-group-disabled]) &,
   :host([disabled]:not([disabled='false'])) & {
     cursor: default;
+  }
+
+  // Hide focus outline when focus origin is mouse or touch. This is being used in tooltip as a workaround.
+  :host(:focus-visible:not([data-focus-origin='mouse'], [data-focus-origin='touch'])) & {
+    @include sbb.focus-outline;
+
+    border-radius: calc(var(--sbb-border-radius-4x) - var(--sbb-focus-outline-offset));
   }
 }
 
