--- a/src/components/sbb-slider/sbb-slider.scss
+++ b/src/components/sbb-slider/sbb-slider.scss
@@ -118,7 +118,8 @@
   border-radius: 50%;
   pointer-events: none;
 
-  :host(:focus-visible) & {
+  // Hide focus outline when focus origin is mouse or touch. This is being used in tooltip as a workaround.
+  :host(:focus-visible:not([data-focus-origin='mouse'], [data-focus-origin='touch'])) & {
     @include sbb.focus-outline;
 
     --sbb-slider-knob-size: var(--sbb-slider-knob-size-active);
