--- a/src/components/sbb-toggle-option/sbb-toggle-option.scss
+++ b/src/components/sbb-toggle-option/sbb-toggle-option.scss
@@ -17,7 +17,8 @@
   z-index: 1;
 }
 
-:host(:focus-visible) {
+// Hide focus outline when focus origin is mouse or touch. This is being used in tooltip as a workaround.
+:host(:focus-visible:not([data-focus-origin='mouse'], [data-focus-origin='touch'])) {
   // Use !important here to not interfere with Firefox focus ring definition
   // which appears in normalize css of several frameworks.
   outline: none !important;
@@ -58,7 +59,8 @@ input[type='radio'] {
 
   // We need to use a ::before pseudo-element to show a single outline wrapping
   // the entire toggle when a toggle option receives :focus-visible.
-  :host(:focus-visible) & {
+  // Hide focus outline when focus origin is mouse or touch. This is being used in tooltip as a workaround.
+  :host(:focus-visible:not([data-focus-origin='mouse'], [data-focus-origin='touch'])) & {
     ::before {
       content: '';
       position: absolute;
