--- a/src/global/styles/mixins/link.scss
+++ b/src/global/styles/mixins/link.scss
@@ -50,7 +50,8 @@
 }
 
 @mixin link-focus-visible {
-  &:focus-visible {
+  // Hide focus outline when focus origin is mouse or touch. This is being used in tooltip as a workaround.
+  &:focus-visible:not([data-focus-origin='mouse'], [data-focus-origin='touch']) {
     @include a11y.focus-outline;
 
     border-radius: calc(var(--sbb-border-radius-4x) - var(--sbb-focus-outline-offset));
