--- a/src/components/sbb-menu/sbb-menu.scss
+++ b/src/components/sbb-menu/sbb-menu.scss
@@ -23,7 +23,7 @@
 
   // 85vh is not an exact value but looks optimized for mobile view.
   --sbb-menu-max-height: calc(85vh - var(--sbb-spacing-fixed-8x));
-  --sbb-menu-min-height: #{sbb.px-to-rem-build(120)};
+  --sbb-menu-min-height: #{sbb.px-to-rem-build(48.5)};
   --sbb-menu-border-radius: var(--sbb-border-radius-4x);
   --sbb-menu-visibility: hidden;
   --sbb-menu-backdrop-color: transparent;
@@ -134,15 +134,15 @@
 
   @include sbb.mq($from: medium) {
     inset-block-start: 0;
+    inset-block-end: unset;
     inset-inline-start: 0;
     inset-inline-end: unset;
-    inset-block-end: unset;
     max-height: fit-content;
     border-radius: var(--sbb-menu-border-radius);
 
     &[open] {
-      top: var(--sbb-menu-position-y);
-      left: var(--sbb-menu-position-x);
+      inset-block-start: var(--sbb-menu-position-y);
+      inset-inline-start: var(--sbb-menu-position-x);
       max-height: var(--sbb-menu-max-height);
       min-height: var(--sbb-menu-min-height);
     }
