fix: radio button

--- a/src/components/sbb-radio-button/sbb-radio-button.scss
+++ b/src/components/sbb-radio-button/sbb-radio-button.scss
@@ -34,6 +34,7 @@
 .sbb-radio-button {
   @include sbb.text-m--regular;
 
+  display: inline-block;
   cursor: pointer;
   user-select: none;
   position: relative;
