fix: align scrollbar names with Figma
BREAKING CHANGE:
- renamed SASS mixin `scrollbar-dark` to `scrollbar-negative`
- renamed SASS mixin `scrollbar-light` to `scrollbar-positive`

--- a/src/components/sbb-navigation-section/sbb-navigation-section.scss
+++ b/src/components/sbb-navigation-section/sbb-navigation-section.scss
@@ -140,7 +140,7 @@
 }
 
 .sbb-navigation-section__wrapper {
-  @include sbb.scrollbar-dark;
+  @include sbb.scrollbar-negative;
 
   height: 100%;
   padding-block: var(--sbb-navigation-section-padding-block);
