--- a/src/components/sbb-train/sbb-train.scss
+++ b/src/components/sbb-train/sbb-train.scss
@@ -127,3 +127,7 @@
   overflow: hidden;
   padding: 0 var(--sbb-train-direction-station-padding);
 }
+
+.sbb-screenreaderonly {
+  @include sbb.screen-reader-only;
+}
