--- a/src/components/sbb-train-formation/sbb-train-formation.scss
+++ b/src/components/sbb-train-formation/sbb-train-formation.scss
@@ -24,8 +24,12 @@
   @include sbb.scrollbar-light;
 
   display: grid;
-  grid-template: auto 1fr auto auto auto 'start sectors end'
+  grid-template-columns: auto 1fr auto;
+  grid-template-rows: auto auto;
+  grid-template-areas:
+    'start sectors end'
     'start trains end';
+
   position: relative;
   overflow-x: auto;
   background-color: var(--sbb-train-formation-background-color);
