--- a/src/components/sbb-train-wagon/sbb-train-wagon.scss
+++ b/src/components/sbb-train-wagon/sbb-train-wagon.scss
@@ -33,8 +33,9 @@
   @include sbb.list-reset;
 
   display: grid;
-  grid-template: 1fr 1fr auto 1fr 'label label'
-    'occupancy class';
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto 1fr;
+  grid-template-areas: 'label label' 'occupancy class';
   position: relative;
   width: 100%;
 
