--- a/src/components/sbb-pearl-chain-vertical-item/sbb-pearl-chain-vertical-item.scss
+++ b/src/components/sbb-pearl-chain-vertical-item/sbb-pearl-chain-vertical-item.scss
@@ -11,6 +11,7 @@
   position: relative;
 
   --sbb-pearl-chain-vertical-right-item-width: 100%;
+  --sbb-pearl-chain-vertical-middle-item-min-width: var(--sbb-pearl-chain-bullet-size-start-end);
   --sbb-pearl-chain-vertical-item-border-width: var(--sbb-border-width-2x);
   --sbb-pearl-chain-vertical-item-border-width-thin: var(--sbb-border-width-1x);
   --sbb-pearl-chain-vertical-item-spacing-small: var(--sbb-spacing-fixed-1x);
@@ -24,19 +25,22 @@
 }
 
 // layout stlyes
-
+slot[name='right'],
 .sbb-pearl-chain-vertical-item__column {
   display: table-cell;
   position: relative;
   vertical-align: top;
 }
 
-.sbb-pearl-chain-vertical-item__column--right {
+slot[name='right'] {
   width: var(--sbb-pearl-chain-vertical-right-item-width);
 }
 
 .sbb-pearl-chain-vertical-item__column--middle {
-  width: var(--sbb-pearl-chain-vertical-middle-item-width, --sbb-pearl-chain-bullet-size-start-end);
+  min-width: var(
+    --sbb-pearl-chain-vertical-middle-item-min-width,
+    --sbb-pearl-chain-vertical-middle-min-width
+  );
 }
 
 slot[name='left']::slotted(*) {
